/**
 * Help + error UX (Terminal + CI UX Overhaul plan, M2).
 *
 * The help verb must dispatch BEFORE the scan fall-through (unknown
 * verbs are scan targets — `mjolnir help` used to scan the CWD).
 * Usage errors keep exit 10 but explain themselves: nearest-flag
 * suggestion (Levenshtein ≤ 2, hand-rolled) + the help command.
 * `help`/`<verb> --help` answer a question → exit 0.
 */

import { readFileSync } from "node:fs";
import { join } from "node:path";

import { describe, expect, it, vi } from "vitest";
import {
  main,
  runHelpCommand,
  levenshtein,
  nearestFlags,
  parseArgs,
  usageErrorMessage,
  type Output,
} from "../../src/cli.js";
import {
  EXIT_CODE_TABLE,
  HELP_ENTRIES,
  hasVerbHelp,
  renderRootHelp,
  renderVerbHelp,
} from "../../src/commands/help.js";
import { CLI_COMMAND_NAMES } from "../../src/engine/cli-command-names.js";
import { renderCiSubcommandHelp } from "../../src/cli.js";

function capture() {
  let out = "";
  let err = "";
  return {
    io: {
      out: ((s: string) => (out += `${s}\n`)) as Output,
      err: ((...parts: string[]) => (err += `${parts.join(" ")}\n`)) as Output,
    },
    text: () => out,
    errText: () => err,
  };
}

describe("root help", () => {
  it("has a detailed page for every registered command", () => {
    const rootHelp = new Set(["scan", "ci", "help"]);
    const missing = CLI_COMMAND_NAMES.filter(
      (command) => !rootHelp.has(command) && !hasVerbHelp(command),
    );
    expect(missing).toEqual([]);
  });

  it("groups every registered verb under its section", () => {
    const text = renderRootHelp();
    const normalized = text.replace(/\s+/g, " ");
    // The groups that HAVE verbs. The collapse emptied two of them
    // and the renderer omits an empty group rather than printing a heading
    // over nothing — so asserting all five would be asserting a table of
    // contents that promises sections the page does not have.
    for (const group of ["CI & PRs", "Maintenance", "Meta"]) {
      expect(text).toContain(`Subcommands — ${group}:`);
    }
    for (const e of HELP_ENTRIES) {
      expect(text).toContain(e.verb);
      expect(normalized).toContain(e.summary);
    }
  });

  it("carries copy-pasteable examples, the exit-code table and the docs link", () => {
    const text = renderRootHelp();
    expect(text).toMatch(/\$ mjolnir --scope changed/);
    expect(text).toMatch(/\$ mjolnir ci install/);
    expect(text).toMatch(/\$ explain --evidence test-results/);
    for (const [code] of EXIT_CODE_TABLE) {
      expect(text).toContain(`  ${code} `);
    }
    expect(text).toContain("https://github.com/Sergey-Bar/Mjolnir");
    expect(text).toContain("mjolnir help <verb>");
  });

  it("shows the frozen exit-code line verbatim", () => {
    expect(renderRootHelp()).toContain("Exit codes: 0 · 1 · 2 · 10 · 20");
  });

  it("snapshots the default root help output", () => {
    expect(renderRootHelp()).toMatchSnapshot();
  });

  it("snapshots the narrow-width root help output", () => {
    const text = renderRootHelp(1, { width: 60 });
    expect(text).toContain("ci install [--gate advisory|error|warning]");
    expect(text).toMatchSnapshot();
  });

  it("wraps long help rows cleanly at narrow terminal widths", () => {
    const text = renderRootHelp(1, { width: 60 });
    expect(text).not.toMatch(/\[--force\]generate the PR workflow/);
    expect(text).not.toMatch(/\[--path-prefix <dir>\]CI annotations/);
    expect(text).not.toMatch(/\[--no-flaky-md\]runtime evidence/);
    expect(text).not.toMatch(/\[--limit=N\]rule catalog/);
  });

  it("keeps the same content when width changes; only wrapping changes", () => {
    const normalize = (s: string) => s.replace(/\s+/g, " ").trim();
    expect(normalize(renderRootHelp())).toBe(
      normalize(renderRootHelp(1, { width: 60 })),
    );
  });

  it("skips a GROUPS verb missing from the registry (defensive, no crash)", () => {
    // HELP_ENTRIES is a mutable exported array; simulating a drifted
    // GROUPS entry exercises the render guard without crashing.
    const idx = HELP_ENTRIES.findIndex((e) => e.verb === "evidence-graph");
    const removed = HELP_ENTRIES.splice(idx, 1)[0];
    try {
      const text = renderRootHelp();
      expect(text).not.toContain("shields.io endpoint JSON");
    } finally {
      HELP_ENTRIES.splice(idx, 0, removed as (typeof HELP_ENTRIES)[number]);
    }
  });
});

describe("per-verb help", () => {
  it("renders usage, examples and next step for a known verb", () => {
    const text = renderVerbHelp("fix");
    expect(text).toContain("fix — ");
    expect(text).toContain("Usage:");
    expect(text).toMatch(/\$ mjolnir fix --dry-run/);
  });

  it("no rendered help page suggests a retired command", () => {
    // Every verb the Next step blocks used to name — baseline, diff — is
    // gone, so the blocks are gone with them. The assertion is the NEGATIVE
    // one, and it is the one that survives the next collapse: whatever the
    // catalogue declares, no page a reader can reach may suggest a command
    // the CLI contract has retired.
    //
    // It reads the retirements out of `docs/cli-contract.json` rather than
    // listing them, because a hand-kept list here would be a second source
    // that passes on the command it was written against and fails on the
    // next one — which is the same defect as the hardcoded `@v3` the
    // translation sync propagated into twenty-two READMEs.
    const retired =
      (
        JSON.parse(
          readFileSync(
            join(import.meta.dirname, "..", "..", "docs", "cli-contract.json"),
            "utf8",
          ),
        ) as { retiredVerbs?: Array<{ verb: string }> }
      ).retiredVerbs ?? [];
    expect(
      retired.length,
      "the contract records no retirements at all — the sweep below would pass on nothing",
    ).toBeGreaterThan(0);
    const names = retired.map((r) => r.verb);
    const pattern = new RegExp(`\\bmjolnir\\s+(?:${names.join("|")})\\b`);
    for (const entry of HELP_ENTRIES) {
      const text = renderVerbHelp(entry.verb);
      expect(text, `${entry.verb}'s help names a retired command`).not.toMatch(
        pattern,
      );
    }
    // And the same rule for the two composite pages.
    for (const page of [renderRootHelp(), renderCiSubcommandHelp()]) {
      expect(page, "a composite help page names a retired command").not.toMatch(
        pattern,
      );
    }
  });

  it("never fabricates a page for an unknown verb", () => {
    const text = renderVerbHelp("teleport");
    expect(text).toContain('No detailed help for "teleport"');
    expect(text).toContain("$ mjolnir --help");
  });

  it("hasVerbHelp is exact-match only", () => {
    expect(hasVerbHelp("fix")).toBe(true);
    expect(hasVerbHelp("fixit")).toBe(false);
    expect(hasVerbHelp("fix --dry-run")).toBe(false);
  });

  it("every registered entry has usage + at least one example", () => {
    for (const e of HELP_ENTRIES) {
      expect(e.usage.startsWith("mjolnir "), e.verb).toBe(true);
      expect(e.examples.length, e.verb).toBeGreaterThan(0);
    }
  });
});

describe("help dispatch", () => {
  it("`mjolnir help` prints the overview and exits 0", () => {
    const cap = capture();
    expect(runHelpCommand([], cap.io)).toBe(0);
    expect(cap.text()).toContain("Usage: mjolnir");
  });

  it("`mjolnir help <verb>` prints the verb page and exits 0 (default io)", () => {
    // Omitting io exercises the console fallback wiring directly.
    const logSpy = vi.spyOn(console, "log").mockImplementation(() => {});
    try {
      expect(runHelpCommand(["fix"])).toBe(0);
      const printed = logSpy.mock.calls.map((a) => a.join(" ")).join("\n");
      expect(printed).toContain("apply safe auto-fixes");
    } finally {
      logSpy.mockRestore();
    }
  });

  it("`mjolnir help <unknown>` is honest and still exits 0", () => {
    const cap = capture();
    expect(runHelpCommand(["teleport"], cap.io)).toBe(0);
    expect(cap.text()).toContain('No detailed help for "teleport"');
  });

  it("`mjolnir help ci install` resolves the two-word verb page", () => {
    const cap = capture();
    expect(runHelpCommand(["ci", "install"], cap.io)).toBe(0);
    expect(cap.text()).toContain("ci install — ");
    // Two tokens that do NOT form a registered verb fall through to the
    // single-word page (here: unknown → honest no-page).
    const cap2 = capture();
    expect(runHelpCommand(["no", "such"], cap2.io)).toBe(0);
    expect(cap2.text()).toContain('No detailed help for "no"');
  });

  it("`mjolnir <verb> --help` routes to the verb page before the handler", () => {
    const cap = capture();
    // `fix --help` would otherwise scan the CWD (exit 1 path); help
    // intercepts it with a page and exits 0.
    const code = runHelpCommand(["fix", "--help"], cap.io);
    expect(code).toBe(0);
    expect(cap.text()).toContain("fix — ");
  });
});

describe("levenshtein (hand-rolled, no deps)", () => {
  it("matches the textbook definition", () => {
    expect(levenshtein("", "")).toBe(0);
    expect(levenshtein("a", "")).toBe(1);
    expect(levenshtein("", "abc")).toBe(3);
    expect(levenshtein("kitten", "sitting")).toBe(3);
    expect(levenshtein("--scope", "--scope")).toBe(0);
    expect(levenshtein("--tone", "--tore")).toBe(1);
  });

  it("is symmetric", () => {
    expect(levenshtein("abcdef", "azced")).toBe(levenshtein("azced", "abcdef"));
  });
});

describe("nearestFlags suggestions", () => {
  it("suggests the right flag for a near miss", () => {
    const s = nearestFlags("--jso");
    expect(s).toContain("--json");
  });

  it("suggests for typos within distance 2", () => {
    expect(nearestFlags("--scope")).toContain("--scope");
    expect(nearestFlags("--verbosee")).toContain("--verbose");
  });

  it("returns nothing for a token unlike any flag", () => {
    expect(nearestFlags("--zzzzzzzz")).toEqual([]);
  });

  it("caps the suggestion list", () => {
    expect(nearestFlags("--json", 1)).toHaveLength(1);
  });
});

describe("friendly usage errors", () => {
  it("unknown flag names itself, suggests neighbors, points at help", () => {
    const msg = usageErrorMessage({ token: "--jso" });
    expect(msg).toContain('unknown flag "--jso"');
    expect(msg).toContain("Did you mean: --json");
    expect(msg).toContain("Run mjolnir --help");
  });

  it("a rejected value names the flag it belongs to", () => {
    const msg = usageErrorMessage({ flag: "--tone", token: "loud" });
    expect(msg).toContain('invalid value "loud" for --tone');
    expect(msg).toContain("Run mjolnir --help");
  });

  it('a missing value renders empty quotes (?? "" fallback)', () => {
    // --path-prefix as the last token leaves val undefined; the message
    // must still render (never "undefined" in user-facing text).
    const msg = usageErrorMessage({ flag: "--path-prefix", token: undefined });
    expect(msg).toContain('invalid value "" for --path-prefix');
    const msg2 = usageErrorMessage({ token: undefined });
    expect(msg2).toContain('unknown flag ""');
  });

  it("levenshtein's ?? fallbacks hold for empty inputs (boundary arms)", () => {
    // The DP table reads cur[j-1] on the first column: the ?? arms exist
    // for the no-candidate case; these calls exercise the boundary cells.
    expect(nearestFlags("--json").length).toBeGreaterThan(0);
    expect(levenshtein("a", "b")).toBe(1);
  });

  it("parseArgs still returns null for every usage error (legacy contract)", () => {
    expect(parseArgs(["--nope"])).toBeNull();
    expect(parseArgs(["--tone", "loud"])).toBeNull();
    expect(parseArgs(["--format", "xml"])).toBeNull();
    expect(parseArgs(["-h"])).toBeNull();
    expect(parseArgs(["--help"])).toBeNull();
  });

  it("parseArgs reports the offending token through the optional hook", () => {
    const seen: Array<{
      token?: string | undefined;
      flag?: string | undefined;
    }> = [];
    const args = parseArgs(["--nope"], (d) => seen.push(d));
    expect(args).toBeNull();
    expect(seen).toEqual([{ token: "--nope" }]);
    const seen2: Array<{
      token?: string | undefined;
      flag?: string | undefined;
    }> = [];
    expect(parseArgs(["--tone", "loud"], (d) => seen2.push(d))).toBeNull();
    expect(seen2).toEqual([{ flag: "--tone", token: "loud" }]);
  });

  it("parseArgs without the hook reports nothing (stdout purity)", () => {
    expect(parseArgs(["--nope"])).toBeNull();
  });

  it("--no-progress parses into args.noProgress (additive flag)", () => {
    expect(parseArgs(["--no-progress"])?.noProgress).toBe(true);
    expect(parseArgs(["--no-progress", "."])?.target).toBe(".");
    expect(parseArgs(["."])?.noProgress).toBeUndefined();
  });

  it("-h/--help return null from parseArgs (the caller prints usage)", () => {
    expect(parseArgs(["-h"])).toBeNull();
    expect(parseArgs(["--help"])).toBeNull();
  });
});

describe("main() dispatch to help (plan M2)", () => {
  it("`mjolnir <verb> --help` routes through main() to the verb page (exit 0)", async () => {
    const cap = capture();
    await expect(main(["fix", "--help"], cap.io)).resolves.toBe(0);
    expect(cap.text()).toContain("fix — ");
  });

  it("`mjolnir <verb> -h` routes through main() too", async () => {
    // The assertion is that `-h` reaches the page for whatever was asked
    // about — not that a particular verb exists. `explain` owns the arms now,
    // so `-h` on it renders the arm table rather than a rule catalogue.
    const cap = capture();
    await expect(main(["explain", "-h"], cap.io)).resolves.toBe(0);
    expect(cap.text()).toContain("--list");
  });

  it("`mjolnir ci install --help` reaches the two-word page (exit 0)", async () => {
    const cap = capture();
    await expect(main(["ci", "install", "--help"], cap.io)).resolves.toBe(0);
    expect(cap.text()).toContain("ci install — ");
  });

  it("`mjolnir ci install -h` reaches the page via the short flag", async () => {
    const cap = capture();
    await expect(main(["ci", "install", "-h"], cap.io)).resolves.toBe(0);
    expect(cap.text()).toContain("ci install — ");
  });

  it("runHelpCommand with an explicit io uses it (default io arm covered)", () => {
    const cap = capture();
    expect(runHelpCommand(["fix"], cap.io)).toBe(0);
    expect(runHelpCommand([], { out: cap.io.out, err: cap.io.err })).toBe(0);
  });

  it("scan/ci/help render the ROOT help, not the no-page stub (certification P3)", () => {
    // Registry design: scan's help IS the root help — the overview
    // carries the scan usage lines, so `mjolnir scan --help`,
    // `mjolnir ci --help` and `mjolnir help --help` must render it
    // instead of the "No detailed help for X" stub (audit help-matrix:
    // all three rendered the stub at exit 0).
    const root = renderRootHelp();
    for (const verb of ["scan", "ci", "help"]) {
      const cap = capture();
      expect(runHelpCommand([verb], cap.io), verb).toBe(0);
      expect(cap.text(), verb).toBe(`${root}\n`);
      expect(cap.text(), verb).not.toContain("No detailed help for");
    }
    // The page render (which `--help` routes through) agrees.
    expect(renderVerbHelp("scan")).toBe(root);
    // ...and the root help actually carries scan's usage line.
    expect(root).toContain("mjolnir [path]");
    // Unknown verbs keep the honest stub.
    const stub = capture();
    expect(runHelpCommand(["teleport"], stub.io)).toBe(0);
    expect(stub.text()).toContain('No detailed help for "teleport"');
  });

  it("the two-token join falls through to the single-token page when the pair is unregistered", () => {
    const cap = capture();
    expect(runHelpCommand(["teleport", "now"], cap.io)).toBe(0);
    expect(cap.text()).toContain('No detailed help for "teleport"');
  });

  it("`mjolnir help` dispatches as a verb, never as a scan target", async () => {
    const cap = capture();
    await expect(main(["help"], cap.io)).resolves.toBe(0);
    expect(cap.text()).toContain("Usage: mjolnir");
  });

  it("`mjolnir summary` dispatches to the summary command", async () => {
    // Not-found path: exit 10, nothing written to stdout (no scan ran).
    // `summary` retired onto `scan --format github-summary`, so typing the
    // old verb is a usage error — and the error has to SAY the verb does not
    // exist rather than falling through to a scan.
    const cap = capture();
    await expect(main(["summary"], cap.io)).resolves.toBe(10);
    expect(cap.errText()).toContain("unknown subcommand");
  });
});
