// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`root help > snapshots the default root help output 1`] = `
"🔨 mjölnir — verification trust engine for test suites and CI pipelines

Usage: mjolnir [path] [options] · mjolnir <subcommand> [args] · mjolnir help <verb>

The product is one command in CI:

  mjolnir --scope changed        scan only what the branch touched; exit 1 on
                                 new findings. \`mjolnir ci install\` writes the
                                 workflow for you.

Everything else is optional.

  mjolnir [path]                 full-repo scan + WORTHINESS score
  mjolnir explain <RULE-ID>      what/why/fix + measured FP rate for one rule
  mjolnir explain --list --unmeasured     the rules running on assumption, not measurement

Options:
  --json                  machine-readable output
  --format sarif          SARIF 2.1 for GitHub Code Scanning
  --format codequality    GitLab Code Quality report (MR widget artifact)
  --format mermaid        test-architecture diagram
  --format trust-report   the terminal trust report (the default)
  --format pr-comment     a scoped PR comment as Markdown
  --format github-summary
    a GitHub Actions step summary
  --suppressions          print the suppression ledger and stop
  --suppression-gate      fail on an ungoverned suppression (expired, reasonless,
                          orphaned)
  --policy                print the scoring policy in force
  --tone blunt            blunter, pattern-mocking messages
  --verbose               show all findings
  --scope changed         only new/changed lines vs merge-base
  --max-duration <sec>    analysis time budget
  --width <cols>          override terminal width
  --ascii / --no-ascii    force glyph mode
  --strict                include quarantine-tier rules (advisory only — a quarantined
                          detector never gates; see docs/PRODUCT-DECISIONS.md D-2)
  --debug                 print swallowed rule crashes
  --cache                 reuse local per-file verdicts
  --save-baseline         write this scan to .mjolnir/baseline.json so a later scan can
                          say RESOLVED (what \`mjolnir ci verify\` reads)
  --no-progress           no live scan-progress line on stderr
  --score                 print only the numeric score (or \`unknown\`)
  --category <cat>        presentation filter (repeatable)
  --staged                scan only git staged files
  --blocking <level>      exit-status override: error|warning|none
  --enable-plugins        allow npm/JS-module rules (default OFF)
  -v, --version           print the installed version and exit
  -h, --help              show this help

Subcommands — CI & PRs:
  ci install [--gate advisory|error|warning] [--no-action] [--force]
    generate the PR workflow (advisory by default; action-based; scan + annotations +
    gate)
  policy <init|validate|check> [path] [--policy <file>]
    initialize, validate, or check team quality policy gates

Subcommands — Maintenance:
  fix [path] [--dry-run]                          apply safe auto-fixes with proof
                                                  (re-scan verifies each)
  stats                                           all-time local counters of fixes seen
                                                  via diff
  doctor [repo-root]                              self-audit of the rule base (fixture
                                                  firewall, tiers, caps)
  explain --list capability [--json] [--kind <k>] [--maturity M0..M5] [--id <substring>]
    the capability registry: every capability at the maturity the machine can prove
  contract-verify [path] [--contract <scan-json>] [--json]
    machine-contract + exit-code contract integrity vs a scan
  evidence-graph [path] [--file <path>|--rule <id>] [--json]
    build and query the verification evidence graph
  suppression-gate [path] [--policy <file>] [--json]
    enforce suppression policy governance gate

Subcommands — Meta:
  explain <RULE-ID> [--fixtures-root <dir>]       what/why/fix + measured FP rate for
                                                  one rule
  handoff [mjolnir.json] [--category <cat>] [--rules <ids>]
    deterministic fix-handoff artifact from a saved --json report
  install [--staged-hook] [--dry-run] [--force]   install the agent instruction surfaces
                                                  + optional staged hook
  mcp                                             run as a read-only MCP server over
                                                  stdio (scan / explain / ci verify)

Subcommands — Deep analysis:
  analyze [path] --cross-file                     run bounded cross-file analysis with
                                                  explicit findings

Copy-paste starts:
  $ mjolnir                         score this repo's test suite
  $ mjolnir --scope changed         CI gate: only what the branch touched
  $ mjolnir ci install              write the PR workflow
  $ explain --evidence test-results  where the flakes hide

Per-command help: mjolnir help <verb>   (e.g. mjolnir help fix)

Exit codes: 0 · 1 · 2 · 10 · 20
  0   clean — no findings or the requested artifact was produced
  1   errors found (or the diff/impact verdict says the PR should not merge)
  2   partial — the scan ran but was truncated, or input was unreadable
  10  usage — bad flags or arguments; help is printed
  20  crash — internal error; rerun with --debug for the stack trace

Docs: https://github.com/Sergey-Bar/Mjolnir#readme   (JSON schemaVersion 1, additive-only)"
`;

exports[`root help > snapshots the narrow-width root help output 1`] = `
"🔨 mjölnir — verification trust engine for test suites and CI pipelines

Usage: mjolnir [path] [options] · mjolnir <subcommand> [args] · mjolnir help <verb>

The product is one command in CI:

  mjolnir --scope changed        scan only what the branch touched; exit 1 on
                                 new findings. \`mjolnir ci install\` writes the
                                 workflow for you.

Everything else is optional.

  mjolnir [path]                 full-repo scan + WORTHINESS score
  mjolnir explain <RULE-ID>      what/why/fix + measured FP rate for one rule
  mjolnir explain --list --unmeasured     the rules running on assumption, not measurement

Options:
  --json                  machine-readable output
  --format sarif          SARIF 2.1 for GitHub Code Scanning
  --format codequality    GitLab Code Quality report (MR
                          widget artifact)
  --format mermaid        test-architecture diagram
  --format trust-report   the terminal trust report (the
                          default)
  --format pr-comment     a scoped PR comment as Markdown
  --format github-summary
    a GitHub Actions step summary
  --suppressions          print the suppression ledger and
                          stop
  --suppression-gate      fail on an ungoverned suppression
                          (expired, reasonless, orphaned)
  --policy                print the scoring policy in force
  --tone blunt            blunter, pattern-mocking messages
  --verbose               show all findings
  --scope changed         only new/changed lines vs
                          merge-base
  --max-duration <sec>    analysis time budget
  --width <cols>          override terminal width
  --ascii / --no-ascii    force glyph mode
  --strict                include quarantine-tier rules
                          (advisory only — a quarantined
                          detector never gates; see
                          docs/PRODUCT-DECISIONS.md D-2)
  --debug                 print swallowed rule crashes
  --cache                 reuse local per-file verdicts
  --save-baseline         write this scan to
                          .mjolnir/baseline.json so a later
                          scan can say RESOLVED (what
                          \`mjolnir ci verify\` reads)
  --no-progress           no live scan-progress line on
                          stderr
  --score                 print only the numeric score (or
                          \`unknown\`)
  --category <cat>        presentation filter (repeatable)
  --staged                scan only git staged files
  --blocking <level>      exit-status override:
                          error|warning|none
  --enable-plugins        allow npm/JS-module rules (default
                          OFF)
  -v, --version           print the installed version and
                          exit
  -h, --help              show this help

Subcommands — CI & PRs:
  ci install [--gate advisory|error|warning] [--no-action]
  [--force]
    generate the PR workflow (advisory by default;
    action-based; scan + annotations + gate)
  policy <init|validate|check> [path] [--policy <file>]
    initialize, validate, or check team quality policy gates

Subcommands — Maintenance:
  fix [path] [--dry-run]                          apply safe
                                                  auto-fixes with
                                                  proof (re-scan
                                                  verifies each)
  stats                                           all-time local
                                                  counters of
                                                  fixes seen via
                                                  diff
  doctor [repo-root]                              self-audit of
                                                  the rule base
                                                  (fixture
                                                  firewall, tiers,
                                                  caps)
  explain --list capability [--json] [--kind <k>]
  [--maturity M0..M5] [--id <substring>]
    the capability registry: every capability at the
    maturity the machine can prove
  contract-verify [path] [--contract <scan-json>] [--json]
    machine-contract + exit-code contract integrity vs a
    scan
  evidence-graph [path] [--file <path>|--rule <id>] [--json]
    build and query the verification evidence graph
  suppression-gate [path] [--policy <file>] [--json]
    enforce suppression policy governance gate

Subcommands — Meta:
  explain <RULE-ID> [--fixtures-root <dir>]       what/why/fix +
                                                  measured FP rate
                                                  for one rule
  handoff [mjolnir.json] [--category <cat>] [--rules <ids>]
    deterministic fix-handoff artifact from a saved --json
    report
  install [--staged-hook] [--dry-run] [--force]   install the
                                                  agent
                                                  instruction
                                                  surfaces +
                                                  optional staged
                                                  hook
  mcp                                             run as a
                                                  read-only MCP
                                                  server over
                                                  stdio (scan /
                                                  explain / ci
                                                  verify)

Subcommands — Deep analysis:
  analyze [path] --cross-file                     run bounded
                                                  cross-file
                                                  analysis with
                                                  explicit
                                                  findings

Copy-paste starts:
  $ mjolnir                         score this repo's test suite
  $ mjolnir --scope changed         CI gate: only what the branch touched
  $ mjolnir ci install              write the PR workflow
  $ explain --evidence test-results  where the flakes hide

Per-command help: mjolnir help <verb>   (e.g. mjolnir help fix)

Exit codes: 0 · 1 · 2 · 10 · 20
  0   clean — no findings or the requested artifact was produced
  1   errors found (or the diff/impact verdict says the PR should not merge)
  2   partial — the scan ran but was truncated, or input was unreadable
  10  usage — bad flags or arguments; help is printed
  20  crash — internal error; rerun with --debug for the stack trace

Docs: https://github.com/Sergey-Bar/Mjolnir#readme   (JSON schemaVersion 1, additive-only)"
`;
